Added application icons

--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,23 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+  <path
+      android:pathData="M62.21,42H65.83V42.75C65.83,43.03 65.61,43.25 65.33,43.25H62.71C62.44,43.25 62.21,43.03 62.21,42.75V42Z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M41.03,42H44.65V46.75H41.03V42Z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M41.02,42.27C41.02,39.02 42.33,35.9 44.66,33.59C46.99,31.29 50.14,30 53.43,30C56.73,30 59.88,31.29 62.21,33.59C64.54,35.9 65.85,39.02 65.85,42.27L62.21,42.27C62.21,39.97 61.29,37.76 59.64,36.14C57.99,34.51 55.76,33.6 53.43,33.6C51.11,33.6 48.88,34.51 47.23,36.14C45.58,37.76 44.66,39.97 44.66,42.27H41.02Z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M37.49,46.57C35.28,46.57 33.5,48.36 33.5,50.57V71.9C33.5,74.11 35.28,75.9 37.49,75.9H59.65C57.88,73.9 56.81,71.29 56.81,68.42C56.81,62.14 61.96,57.05 68.31,57.05C70.16,57.05 71.91,57.48 73.46,58.25V50.57C73.46,48.36 71.67,46.57 69.46,46.57H37.49ZM55.9,61.24C55.9,62.19 55.34,63.01 54.52,63.4C54.52,63.4 54.52,63.4 54.52,63.41C54.52,63.41 54.52,63.41 54.52,63.41L54.81,66.5C54.83,66.65 54.71,66.77 54.57,66.77H52.39C52.24,66.77 52.13,66.65 52.14,66.5L52.43,63.41C52.43,63.41 52.43,63.4 52.44,63.4C51.62,63.01 51.06,62.19 51.06,61.24C51.06,59.91 52.14,58.84 53.48,58.84C54.81,58.84 55.9,59.91 55.9,61.24Z"
+      android:fillColor="#ffffff"
+      android:fillType="evenOdd"/>
+  <path
+      android:pathData="M78,68.42C78,73.71 73.66,78 68.31,78C62.96,78 58.62,73.71 58.62,68.42C58.62,63.13 62.96,58.84 68.31,58.84C73.66,58.84 78,63.13 78,68.42ZM70.13,68.42C70.13,69.41 69.32,70.22 68.31,70.22C67.31,70.22 66.5,69.41 66.5,68.42C66.5,67.43 67.31,66.63 68.31,66.63C69.32,66.63 70.13,67.43 70.13,68.42ZM71.22,67.52C71.15,67.63 70.94,67.58 70.9,67.46C70.8,67.12 70.59,66.76 70.27,66.45C69.96,66.15 69.6,65.93 69.26,65.84C69.13,65.8 69.08,65.58 69.2,65.52L73.73,62.87C73.84,62.8 73.96,62.93 73.9,63.04L71.22,67.52ZM67.71,60.14C67.71,60 67.82,59.89 67.96,59.89H68.67C68.81,59.89 68.92,60 68.92,60.14V62.03C68.92,62.17 68.81,62.28 68.67,62.28H67.96C67.82,62.28 67.71,62.17 67.71,62.03V60.14ZM67.96,74.71C67.82,74.71 67.71,74.82 67.71,74.96V76.85C67.71,76.99 67.82,77.1 67.96,77.1H68.67C68.81,77.1 68.92,76.99 68.92,76.85V74.96C68.92,74.82 68.81,74.71 68.67,74.71H67.96ZM76.84,67.82C76.98,67.82 77.09,67.93 77.09,68.07V68.77C77.09,68.91 76.98,69.02 76.84,69.02H74.92C74.78,69.02 74.67,68.91 74.67,68.77V68.07C74.67,67.93 74.78,67.82 74.92,67.82H76.84ZM61.95,68.07C61.95,67.93 61.84,67.82 61.7,67.82H59.78C59.64,67.82 59.53,67.93 59.53,68.07V68.77C59.53,68.91 59.64,69.02 59.78,69.02H61.7C61.84,69.02 61.95,68.91 61.95,68.77V68.07Z"
+      android:fillColor="#ffffff"
+      android:fillType="evenOdd"/>
 </vector>
