--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,4 +3,12 @@
     <style name="Theme.UnlockMaster" parent="android:Theme.Material.Light.NoActionBar">
         <item name="android:statusBarColor">#FF45BC82</item>
     </style>
+
+    <style name="SpinnerTimePickerStyle">
+        <item name="android:textSize">48sp</item>
+        <item name="android:fontFamily">@font/amiko_semibold</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:colorControlNormal">@android:color/transparent</item>
+    </style>
 </resources>
