--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.UnlockMaster" parent="Theme.Material3.Light.NoActionBar">
-        <item name="android:statusBarColor">#FF7BEFB2</item>
+    <style name="Theme.UnlockMaster" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="android:statusBarColor">#FF00905A</item>
     </style>
 
     <style name="SpinnerTimePickerStyle">
         <item name="android:textSize">48sp</item>
         <item name="android:fontFamily">@font/amiko_semibold</item>
-        <item name="android:textColorPrimary">@android:color/black</item>
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColorPrimary">#FFD8D8D8</item>
+        <item name="android:textColor">#FFD8D8D8</item>
         <item name="android:colorControlNormal">@android:color/transparent</item>
     </style>
 </resources>
