Improved styling and spacing of the UnlockCountWidget

--- a/app/src/main/res/xml-v31/unlock_count_widget_info.xml
+++ b/app/src/main/res/xml-v31/unlock_count_widget_info.xml
@@ -5,4 +5,6 @@
     android:minWidth="144dp"
     android:minHeight="96dp"
     android:resizeMode="horizontal|vertical"
+    android:targetCellWidth="2"
+    android:targetCellHeight="2"
     android:widgetCategory="home_screen" />
